LogLevel in appsetings

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
+      "Default": "Debug",
       "System": "Information",
-      "Microsoft": "Information"
+      "Microsoft": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.Routing": "Debug",
+      "Platform": "Warning"
     }
   }
 }
