--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,11 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information",
-      "Microsoft.AspNetCore": "Warning",
+      "System": "Debug",
+      "Microsoft": "Debug",
+      "Microsoft.AspNetCore": "Debug",
       "Microsoft.AspNetCore.Routing": "Debug",
-      "Platform": "Warning"
+      "Platform": "Debug",
+      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Debug"
     }
   }
 }
