--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -7,7 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5000"
+      "applicationUrl": "http://localhost:5000;https://localhost:5500"
     },
     "IIS Express": {
       "commandName": "IISExpress",
